[tool.poetry]
name = "pulsar-orbits"
version = "0.1.0"
description = "Measuring the orbital period of pulsars using 20 meter data from Green Bank Observatory."
authors = ["minifold <49851131+minifold@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
psrqpy = "^1.2.9"
numpy = "^2.0.0"
matplotlib = "^3.9.0"
scipy = "^1.14.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.0"
flake8 = "^7.1.0"
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
